# VET-C-SECTION-1-2

./: .gitignore  README.md  REPORT.md  pyproject.toml  requirements.txt
configs/: default.yaml
docs/rfc/implementation/: RFC-1000-repository-initialization.md  RFC-1001-core-types.md  (+14 more)
scripts/: check_rfc_1000_1006.py  run_dummy_infer.py  run_runtime_loop.py
tests/: test_core_types.py  test_dual_perception_encoder.py  test_external_encoder.py  test_fast_gradient_policy.py  test_internal_encoder.py  test_observation_layer.py  test_prediction_error_evaluator.py  test_regime_conditioned_fusion.py  test_regime_engine_vqvae.py  test_rssm_cell.py  test_runtime_loop.py  test_tensor_checks.py  test_unified_rssm.py  test_vet_terrain_generator.py  test_vetc_system.py
vetc/: __init__.py
vetc/core/: __init__.py  constants.py  errors.py  interfaces.py  tensor_checks.py  types.py
vetc/encoder/: __init__.py  dual_perception_encoder.py  external_encoder.py  internal_encoder.py
vetc/fusion/: __init__.py  regime_conditioned_fusion.py  regime_film.py  spatial_pooler.py
vetc/observation/: __init__.py  observation_layer.py
vetc/policy/: __init__.py  fast_gradient_policy.py
vetc/prediction/: __init__.py  prediction_error_evaluator.py
vetc/regime/: __init__.py  dead_code_manager.py  regime_engine_vqvae.py  vector_quantizer.py
vetc/rssm/: __init__.py  posterior_network.py  prior_network.py  rssm_cell.py  unified_rssm.py
vetc/runtime/: __init__.py  runtime_loop.py  vetc_system.py
vetc/terrain/: __init__.py  fourier_features.py  vet_terrain_generator.py
(+17 files in other folders)
