[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vetc"
version = "0.1.0"
description = "VET-C edge AI drone control model foundation."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "torch",
    "pytest",
    "pyyaml",
    "numpy",
]

[tool.setuptools.packages.find]
include = ["vetc*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

